_build/html/reports/qinyunke.err.log
Traceback (most recent call last):
  File "E:\ANACONDA\lib\site-packages\jupyter_cache\executors\utils.py", line 58, in single_nb_execution
    executenb(
  File "E:\ANACONDA\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "E:\ANACONDA\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "E:\ANACONDA\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "E:\ANACONDA\lib\asyncio\base_events.py", line 647, in run_until_complete
    return future.result()
  File "E:\ANACONDA\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "E:\ANACONDA\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "E:\ANACONDA\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
```{code-cell} ipython
import requests
import json

if __name__ == '__main__':
    while True:
        text = input("你说的：")
        
        if text == '再见':
            print()
            break
        else:
            url = 'http://api.qingyunke.com/api.php?key=free&appid=0&msg=%s'%text
            header = {
                'user-agent':'Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/100.0.4896.127 Safari/537.36'
            }
            response = requests.get(url, headers = header)
            response.encoding = 'utf-8'
            text_json = json.loads(response.text)
            context = "菲菲说：%s"%text_json['content']
            print(context)
```
------------------

[1;36m  Cell [1;32mIn[1], line 1[1;36m[0m
[1;33m    ```{code-cell} ipython[0m
[1;37m    ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (3960431519.py, line 1)

